force-app/main/default/objects/Shop_Report__c/Shop_Report__c.object-meta.xml
<CustomObject>
    <label>报告评价</label>
    <nameField>
        <displayFormat>SR-{YYYY}{MM}{0000}</displayFormat>
        <label>报告编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>报告评价</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>