force-app/main/default/objects/Shop_Report__c/fields/Daily_Inspection_Report__c.field-meta.xml
<CustomField>
    <fullName>Daily_Inspection_Report__c</fullName>
    <label>巡店员日报</label>
    <referenceTo>Daily_Inspection_Report__c</referenceTo>
    <relationshipLabel>报告评价</relationshipLabel>
    <relationshipName>Daily_Inspection_Shop_Report</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>