force-app/main/default/objects/Shop_Report__c/fields/RecordLink__c.field-meta.xml
<CustomField>
    <fullName>RecordLink__c</fullName>
    <formula>LEFT($Api.Enterprise_Server_URL_540, FIND( &apos;.my.salesforce.com/services&apos;,$Api.Enterprise_Server_URL_540))+ &apos;lightning.force.com/lightning/r/Daily_Inspection_Report__c/&apos; + Daily_Inspection_Report__c + &apos;/view&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*日报链接</label>
    <type>Text</type>
</CustomField>