force-app/main/default/objects/Shop_Report__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>评价用户</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Shop_Report</relationshipName>
    <type>Lookup</type>
</CustomField>